// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataChart breakdown chart should render the DataChart component 1`] = `
Array [
  Array [
    Object {},
    "ga-chart-breakdown",
    "BAR",
    Object {
      "dimensions": "ga:deviceCategory",
      "end-date": "2020-11-02",
      "filters": undefined,
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-11-01",
    },
    Object {
      "chartArea": Object {
        "left": 50,
        "right": 20,
      },
      "colors": Array [
        "#058dc7",
        "#aadff3",
      ],
      "orientation": "horizontal",
    },
  ],
]
`;

exports[`DataChart breakdown chart should render the DataChart component 2`] = `
<div>
  <section
    class="breakdown svelte-1vmaiqo"
  >
    <article
      class="svelte-pntwh0"
    >
       
      <section
        class="widget-header svelte-1kld2ef"
      >
        <div
          class="title svelte-1kld2ef"
        >
          <h2
            class="svelte-1kld2ef"
          >
            Breakdown
          </h2>
           
           
        </div>
         
        <div
          class="actions svelte-1kld2ef"
        />
      </section>
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <section
          class="ga-chart svelte-1vmaiqo"
        >
           
          <div
            id="ga-chart-breakdown"
          />
        </section>
      </section>
    </article>
  </section>
</div>
`;

exports[`DataChart breakdown chart should update the chart when the dateRange changes 1`] = `
Array [
  Array [
    Object {},
    "ga-chart-breakdown",
    "BAR",
    Object {
      "dimensions": "ga:deviceCategory",
      "end-date": "2020-11-02",
      "filters": undefined,
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-11-01",
    },
    Object {
      "chartArea": Object {
        "left": 50,
        "right": 20,
      },
      "colors": Array [
        "#058dc7",
        "#aadff3",
      ],
      "orientation": "horizontal",
    },
  ],
  Array [
    Object {},
    "ga-chart-breakdown",
    "BAR",
    Object {
      "dimensions": "ga:deviceCategory",
      "end-date": "2020-01-02",
      "filters": undefined,
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-01-01",
    },
    Object {
      "chartArea": Object {
        "left": 50,
        "right": 20,
      },
      "colors": Array [
        "#058dc7",
        "#aadff3",
      ],
      "orientation": "horizontal",
    },
  ],
]
`;

exports[`DataChart breakdown chart should update the chart when the selectedEdition changes 1`] = `
Array [
  Array [
    Object {},
    "ga-chart-breakdown",
    "BAR",
    Object {
      "dimensions": "ga:deviceCategory",
      "end-date": "2020-11-02",
      "filters": undefined,
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-11-01",
    },
    Object {
      "chartArea": Object {
        "left": 50,
        "right": 20,
      },
      "colors": Array [
        "#058dc7",
        "#aadff3",
      ],
      "orientation": "horizontal",
    },
  ],
  Array [
    Object {},
    "ga-chart-breakdown",
    "BAR",
    Object {
      "dimensions": "ga:deviceCategory",
      "end-date": "2020-11-02",
      "filters": "ga:dimension2==editionId",
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-11-01",
    },
    Object {
      "chartArea": Object {
        "left": 50,
        "right": 20,
      },
      "colors": Array [
        "#058dc7",
        "#aadff3",
      ],
      "orientation": "horizontal",
    },
  ],
]
`;

exports[`DataChart overview chart should render the DataChart component 1`] = `
Array [
  Array [
    Object {},
    "ga-chart-overview",
    "LINE",
    Object {
      "dimensions": "ga:date",
      "end-date": "2020-11-02",
      "filters": undefined,
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-11-01",
    },
    Object {
      "hAxis": Object {
        "gridlines": Object {
          "units": Object {
            "days": Object {
              "format": Array [
                "dd MMM",
              ],
            },
          },
        },
        "minorGridlines": Object {
          "units": Object {
            "hours": Object {
              "format": Array [
                "",
              ],
            },
            "minutes": Object {
              "format": Array [
                "",
              ],
            },
          },
        },
        "textStyle": Object {
          "color": "#999",
        },
      },
    },
  ],
]
`;

exports[`DataChart overview chart should render the DataChart component 2`] = `
<div>
  <section
    class="overview svelte-1vmaiqo"
  >
    <article
      class="svelte-pntwh0"
    >
       
      <section
        class="widget-header svelte-1kld2ef"
      >
        <div
          class="title svelte-1kld2ef"
        >
          <h2
            class="svelte-1kld2ef"
          >
            Overview
          </h2>
           
           
        </div>
         
        <div
          class="actions svelte-1kld2ef"
        />
      </section>
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <section
          class="ga-chart svelte-1vmaiqo"
        >
           
          <div
            id="ga-chart-overview"
          />
        </section>
      </section>
    </article>
  </section>
</div>
`;

exports[`DataChart overview chart should update the chart when the dateRange changes 1`] = `
Array [
  Array [
    Object {},
    "ga-chart-overview",
    "LINE",
    Object {
      "dimensions": "ga:date",
      "end-date": "2020-11-02",
      "filters": undefined,
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-11-01",
    },
    Object {
      "hAxis": Object {
        "gridlines": Object {
          "units": Object {
            "days": Object {
              "format": Array [
                "dd MMM",
              ],
            },
          },
        },
        "minorGridlines": Object {
          "units": Object {
            "hours": Object {
              "format": Array [
                "",
              ],
            },
            "minutes": Object {
              "format": Array [
                "",
              ],
            },
          },
        },
        "textStyle": Object {
          "color": "#999",
        },
      },
    },
  ],
  Array [
    Object {},
    "ga-chart-overview",
    "LINE",
    Object {
      "dimensions": "ga:date",
      "end-date": "2020-01-02",
      "filters": undefined,
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-01-01",
    },
    Object {
      "hAxis": Object {
        "gridlines": Object {
          "units": Object {
            "days": Object {
              "format": Array [
                "dd MMM",
              ],
            },
          },
        },
        "minorGridlines": Object {
          "units": Object {
            "hours": Object {
              "format": Array [
                "",
              ],
            },
            "minutes": Object {
              "format": Array [
                "",
              ],
            },
          },
        },
        "textStyle": Object {
          "color": "#999",
        },
      },
    },
  ],
]
`;

exports[`DataChart overview chart should update the chart when the selectedEdition changes 1`] = `
Array [
  Array [
    Object {},
    "ga-chart-overview",
    "LINE",
    Object {
      "dimensions": "ga:date",
      "end-date": "2020-11-02",
      "filters": undefined,
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-11-01",
    },
    Object {
      "hAxis": Object {
        "gridlines": Object {
          "units": Object {
            "days": Object {
              "format": Array [
                "dd MMM",
              ],
            },
          },
        },
        "minorGridlines": Object {
          "units": Object {
            "hours": Object {
              "format": Array [
                "",
              ],
            },
            "minutes": Object {
              "format": Array [
                "",
              ],
            },
          },
        },
        "textStyle": Object {
          "color": "#999",
        },
      },
    },
  ],
  Array [
    Object {},
    "ga-chart-overview",
    "LINE",
    Object {
      "dimensions": "ga:date",
      "end-date": "2020-11-02",
      "filters": "ga:dimension2==editionId",
      "ids": "ga:1234567890",
      "metrics": "ga:totalEvents,ga:uniqueEvents",
      "start-date": "2020-11-01",
    },
    Object {
      "hAxis": Object {
        "gridlines": Object {
          "units": Object {
            "days": Object {
              "format": Array [
                "dd MMM",
              ],
            },
          },
        },
        "minorGridlines": Object {
          "units": Object {
            "hours": Object {
              "format": Array [
                "",
              ],
            },
            "minutes": Object {
              "format": Array [
                "",
              ],
            },
          },
        },
        "textStyle": Object {
          "color": "#999",
        },
      },
    },
  ],
]
`;
